# mallnet-core

./: .env  .gitignore  README.md  alembic.ini  mallnet_dev.db  pyproject.toml  requirements.txt
alembic/: env.py  script.py.mako
alembic/versions/: 4ec51ed618df_initial_schema.py  66dda0613bb9_add_vouchers.py  a947a034e6e7_initial_schema.py
app/: main.py
app/api/public/: qr.py
app/api/v1/: api.py
app/api/v1/routers/: connect.py  mikrotik_vouchers.py  packages.py  payments.py  subscriptions.py  vouchers.py
app/config/: mikrotik.py  paynow.py  settings.py
app/database/: init_db.py  session.py
app/mikrotik/: client.py  hotspot.py  vouchers.py
app/models/: internet_package.py  mall.py  payment.py  router.py  subscription.py  user.py  voucher.py
app/repositories/: base.py  internet_package_repository.py  mall_repository.py  payment_repository.py  router_repository.py  subscription_repository.py  user_repository.py  voucher_repository.py
app/schemas/: internet_package.py  payment.py  subscription.py  user.py  voucher.py
app/services/: ecocash_service.py  mikrotik_voucher_service.py  payment_service.py  subscription_service.py  voucher_service.py
app/tasks/: beat_schedule.py  celery_app.py  subscription_expiry.py
app/templates/: packages.html
app/utils/: bulk_qr.py  export.py  qr.py  reference_parser.py  voucher_pdf.py
mallnet_core.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: test_mall_router.py  test_mikrotik.py  test_packages.py
