[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mallnet-core"
version = "0.1.0"
description = "Multi-mall Internet management system with MikroTik integration"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }

authors = [
    { name = "Takesure Mamvota", email = "dev@mallnet.local" }
]

dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "psycopg2-binary>=2.9"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "httpx>=0.27",
    "black>=24.0",
    "isort>=5.13",
    "flake8>=7.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "scripts*"]

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.isort]
profile = "black"

[tool.flake8]
max-line-length = 88
exclude = [
    ".venv",
    "__pycache__",
    "alembic",
]

[tool.alembic]
script_location = "alembic"
